Removes partials that will not be needed for phase one * Adds bg image for jumbotron * Fixes style layout bugs with feature, page-hd and section

--- a/public/assets/styles/modern.css
+++ b/public/assets/styles/modern.css
@@ -168,11 +168,11 @@ img {
 
 @media only screen and (max-width: 328px) and (min-width: 0) and (max-width: 767px) and (min-width: 0) {
   .mix-page-hd_sticky + .page-bd {
-    padding-top: 23.4375%; } }
+    padding-top: 17.1875%; } }
 
 @media only screen and (max-width: 328px) and (min-width: 0) and (min-width: 768px) {
   .mix-page-hd_sticky + .page-bd {
-    padding-top: 17.1875%; } }
+    padding-top: 11.71875%; } }
 
 @media only screen and (max-width: 328px) and (min-width: 0) {
   .alert {
@@ -222,6 +222,9 @@ img {
   .box_large {
     padding-top: 17.1875%;
     padding-bottom: 17.1875%; }
+  .mix-box_jumbotron {
+    background: transparent url("/assets/images/black-and-white-city-houses-skyline.jpg") 50% 80% no-repeat;
+    background-size: cover; }
   .mix-box_163202198 {
     background: #a3cac6; }
   .mix-box_255255255 {
@@ -553,7 +556,8 @@ img {
     padding-bottom: 30px; }
   .section_media {
     display: table;
-    width: 100%; }
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.3); }
   .section_media-img {
     display: table-cell;
     text-align: center; }
@@ -611,7 +615,9 @@ img {
   .btn {
     font-size: 16px; }
   .feature-hd {
-    padding-bottom: 3.90625%; }
+    margin: 0 auto;
+    padding-bottom: 3.90625%;
+    text-align: center; }
   .feature-bd {
     padding-bottom: 3.90625%; }
   .feature-ft > * + * {
@@ -640,7 +646,8 @@ img {
     padding-top: 10px;
     padding-bottom: 10px; }
   .section_media {
-    display: block; }
+    display: block;
+    padding: 30px 0; }
   .section_media-img {
     display: block; }
   .section_media-content {
@@ -782,11 +789,11 @@ img {
 
 @media only screen and (max-width: 767px) and (min-width: 329px) and (max-width: 767px) and (min-width: 0) {
   .mix-page-hd_sticky + .page-bd {
-    padding-top: 23.4375%; } }
+    padding-top: 17.1875%; } }
 
 @media only screen and (max-width: 767px) and (min-width: 329px) and (min-width: 768px) {
   .mix-page-hd_sticky + .page-bd {
-    padding-top: 17.1875%; } }
+    padding-top: 11.71875%; } }
 
 @media only screen and (max-width: 767px) and (min-width: 329px) {
   .alert {
@@ -836,6 +843,9 @@ img {
   .box_large {
     padding-top: 17.1875%;
     padding-bottom: 17.1875%; }
+  .mix-box_jumbotron {
+    background: transparent url("/assets/images/black-and-white-city-houses-skyline.jpg") 50% 80% no-repeat;
+    background-size: cover; }
   .mix-box_163202198 {
     background: #a3cac6; }
   .mix-box_255255255 {
@@ -1167,7 +1177,8 @@ img {
     padding-bottom: 30px; }
   .section_media {
     display: table;
-    width: 100%; }
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.3); }
   .section_media-img {
     display: table-cell;
     text-align: center; }
@@ -1225,7 +1236,9 @@ img {
   .btn {
     font-size: 16px; }
   .feature-hd {
-    padding-bottom: 3.90625%; }
+    margin: 0 auto;
+    padding-bottom: 3.90625%;
+    text-align: center; }
   .feature-bd {
     padding-bottom: 3.90625%; }
   .feature-ft > * + * {
@@ -1254,7 +1267,8 @@ img {
     padding-top: 10px;
     padding-bottom: 10px; }
   .section_media {
-    display: block; }
+    display: block;
+    padding: 30px 0; }
   .section_media-img {
     display: block; }
   .section_media-content {
@@ -1291,11 +1305,11 @@ img {
 
 @media only screen and (min-width: 768px) and (max-width: 767px) and (min-width: 0) {
   .mix-page-hd_sticky + .page-bd {
-    padding-top: 23.4375%; } }
+    padding-top: 17.1875%; } }
 
 @media only screen and (min-width: 768px) and (min-width: 768px) {
   .mix-page-hd_sticky + .page-bd {
-    padding-top: 17.1875%; } }
+    padding-top: 11.71875%; } }
 
 @media only screen and (min-width: 768px) {
   .alert {
@@ -1345,6 +1359,9 @@ img {
   .box_large {
     padding-top: 17.1875%;
     padding-bottom: 17.1875%; }
+  .mix-box_jumbotron {
+    background: transparent url("/assets/images/black-and-white-city-houses-skyline.jpg") 50% 80% no-repeat;
+    background-size: cover; }
   .mix-box_163202198 {
     background: #a3cac6; }
   .mix-box_255255255 {
@@ -1676,7 +1693,8 @@ img {
     padding-bottom: 30px; }
   .section_media {
     display: table;
-    width: 100%; }
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.3); }
   .section_media-img {
     display: table-cell;
     text-align: center; }
