--- a/src/scss/modules/box/_box.scss
+++ b/src/scss/modules/box/_box.scss
@@ -21,6 +21,11 @@
     padding-bottom: $PADDING_XL;
 }
 
+.mix-box_jumbotron {
+    background: transparent url("/assets/images/black-and-white-city-houses-skyline.jpg") 50% 80% no-repeat;
+    background-size: cover;
+}
+
 .mix-box_163202198 {
     background: rgba(163, 202, 198, 1);
 }
