--- a/src/scss/modules/feature/_feature_md.scss
+++ b/src/scss/modules/feature/_feature_md.scss
@@ -4,7 +4,9 @@
 .feature {}
 
 .feature-hd {
+    margin: 0 auto;
     padding-bottom: $PADDING_TINY;
+    text-align: center;
 }
 
 .feature-bd {
