--- a/src/scss/modules/section/_section.scss
+++ b/src/scss/modules/section/_section.scss
@@ -11,6 +11,7 @@ $LOCAL_BASE_PADDING: $BASE_PADDING * 3;
 .section_media {
     display: table;
     width: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .section_media-img {
