--- a/src/scss/modules/section/_section_md.scss
+++ b/src/scss/modules/section/_section_md.scss
@@ -8,6 +8,7 @@
 
 .section_media {
     display: block;
+    padding: 30px 0;
 }
 
 .section_media-img {
